fixed overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -235,6 +235,23 @@ a:hover {
     top: 0
 }
 
+.list-inside {
+    list-style-position: inside
+}
+
+.list-disc {
+    list-style-type: disc
+}
+
+.list-none {
+    list-style-type: none
+}
+
+
+.grid-cols-1 {
+    grid-template-columns: repeat(1,minmax(0,1fr))
+}
+
 menu,ol,ul {
     list-style: none;
     margin: 0;
@@ -447,10 +464,110 @@ menu,ol,ul {
     width: 100%
 }
 
+.-mx-1 {
+    margin-left: -.25rem;
+    margin-right: -.25rem
+}
+
 .mx-auto {
     margin-left: auto;
     margin-right: auto
 }
+
+.my-1 {
+    margin-top: .25rem;
+    margin-bottom: .25rem
+}
+
+.my-2 {
+    margin-top: .5rem;
+    margin-bottom: .5rem
+}
+
+.mb-1 {
+    margin-bottom: .25rem
+}
+
+.mb-12 {
+    margin-bottom: 3rem
+}
+
+.mb-16 {
+    margin-bottom: 4rem
+}
+
+.mb-2 {
+    margin-bottom: .5rem
+}
+
+.mb-20 {
+    margin-bottom: 5rem
+}
+
+.mb-4 {
+    margin-bottom: 1rem
+}
+
+.mb-6 {
+    margin-bottom: 1.5rem
+}
+
+.mb-8 {
+    margin-bottom: 2rem
+}
+
+.ml-1 {
+    margin-left: .25rem
+}
+
+.ml-2 {
+    margin-left: .5rem
+}
+
+.ml-4 {
+    margin-left: 1rem
+}
+
+.ml-auto {
+    margin-left: auto
+}
+
+.mr-2 {
+    margin-right: .5rem
+}
+
+.mt-1 {
+    margin-top: .25rem
+}
+
+.mt-1\.5 {
+    margin-top: .375rem
+}
+
+.mt-12 {
+    margin-top: 3rem
+}
+
+.mt-16 {
+    margin-top: 4rem
+}
+
+.mt-3 {
+    margin-top: .75rem
+}
+
+.mt-4 {
+    margin-top: 1rem
+}
+
+.mt-6 {
+    margin-top: 1.5rem
+}
+
+.mt-8 {
+    margin-top: 2rem
+}
+
 
 .p-1 {
     padding: .25rem
@@ -496,6 +613,56 @@ menu,ol,ul {
     padding-left: 2rem;
     padding-right: 2rem
 }
+
+.py-0\.5 {
+    padding-top: .125rem;
+    padding-bottom: .125rem
+}
+
+.py-1 {
+    padding-top: .25rem;
+    padding-bottom: .25rem
+}
+
+.py-1\.5 {
+    padding-top: .375rem;
+    padding-bottom: .375rem
+}
+
+.py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem
+}
+
+.py-2 {
+    padding-top: .5rem;
+    padding-bottom: .5rem
+}
+
+.py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem
+}
+
+.py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem
+}
+
+.py-3 {
+    padding-top: .75rem;
+    padding-bottom: .75rem
+}
+
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem
+}
+
+.py-8 {
+    padding-top: 2rem
+}
+
 
 .h-1\.5 {
     height: .375rem
@@ -583,6 +750,17 @@ menu,ol,ul {
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%
+}
+
+.overflow-hidden {
+    overflow: hidden
+}
+
+.grid {
+    display: grid;
+    width: 100vw; /* Set width to exactly match the screen */
+    max-width: 100%; /* Prevent it from growing beyond the screen */
+    /* overflow-x: hidden; Prevent horizontal scrolling */
 }
 
 @media (min-width: 768px) {
@@ -913,6 +1091,44 @@ menu,ol,ul {
     transition-duration: .15s
 }
 
+.focus\:bg-accent:focus {
+    background-color: hsl(var(--accent))
+}
+
+.focus\:text-accent-foreground:focus {
+    color: hsl(var(--accent-foreground))
+}
+
+.focus\:opacity-100:focus {
+    opacity: 1
+}
+
+.focus\:outline-none:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px
+}
+
+.focus\:ring-1:focus {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color)
+}
+
+.focus\:ring-1:focus,.focus\:ring-2:focus {
+    box-shadow: var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow,0 0 #0000)
+}
+
+.focus\:ring-2:focus {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color)
+}
+
+.focus\:ring-ring:focus {
+    --tw-ring-color: hsl(var(--ring))
+}
+
+.focus\:ring-offset-2:focus {
+    --tw-ring-offset-width: 2px
+}
 
 .focus-visible\:outline-none:focus-visible {
     outline: 2px solid transparent;
@@ -943,6 +1159,18 @@ menu,ol,ul {
 
 .disabled\:opacity-50:disabled {
     opacity: .5
+}
+
+.peer:disabled~.peer-disabled\:cursor-not-allowed {
+    cursor: not-allowed
+}
+
+.peer:disabled~.peer-disabled\:opacity-70 {
+    opacity: .7
+}
+
+.data-\[disabled\]\:pointer-events-none[data-disabled] {
+    pointer-events: none
 }
 
 .data-\[disabled\]\:opacity-50[data-disabled] {
@@ -983,4 +1211,71 @@ button,input:where([type=button]),input:where([type=reset]),input:where([type=su
     -webkit-appearance: button;
     background-color: transparent;
     background-image: none
+}
+
+.\[\&\+div\]\:text-xs+div {
+    font-size: .75rem;
+    line-height: 1rem
+}
+
+.\[\&\>span\]\:line-clamp-1>span {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1
+}
+
+.\[\&\>svg\+div\]\:translate-y-\[-3px\]>svg+div {
+    --tw-translate-y: -3px;
+    transform: translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+.\[\&\>svg\]\:absolute>svg {
+    position: absolute
+}
+
+.\[\&\>svg\]\:left-4>svg {
+    left: 1rem
+}
+
+.\[\&\>svg\]\:top-4>svg {
+    top: 1rem
+}
+
+.\[\&\>svg\]\:size-4>svg {
+    width: 1rem;
+    height: 1rem
+}
+
+.\[\&\>svg\]\:shrink-0>svg {
+    flex-shrink: 0
+}
+
+.\[\&\>svg\]\:text-destructive>svg {
+    color: hsl(var(--destructive))
+}
+
+.\[\&\>svg\]\:text-foreground>svg {
+    color: hsl(var(--foreground))
+}
+
+.\[\&\>svg\~\*\]\:pl-7>svg~* {
+    padding-left: 1.75rem
+}
+
+.\[\&_p\]\:leading-relaxed p {
+    line-height: 1.625
+}
+
+.\[\&_svg\]\:pointer-events-none svg {
+    pointer-events: none
+}
+
+.\[\&_svg\]\:size-4 svg {
+    width: 1rem;
+    height: 1rem
+}
+
+.\[\&_svg\]\:shrink-0 svg {
+    flex-shrink: 0
 }
